tests/semantic_errors/testcase10.c
// return expression from void function

int main(void){
    return 2;
}

void foo(){
    return 2;
}